# cfn-lint-rules

./: .cfnlintrc  .flake8  .gitignore  .isort.cfg  .travis.yml  .yamllint  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  mypy.ini  pylama.ini  pyproject.toml  requirements.txt  run_tests.sh  setup.py
.github/workflows/: release.yml  tests.yml
cfn_lint_ax/rules/: __init__.py  cloud_front.py  cloudfront_distribution_comment.py  code_build.py  ecr.py  ecs.py  intrinsic_function.py  s3.py  s3_block_public_access.py  tags.py
cfn_lint_ax/serverless_rules/: appsync.py  lambda_.py  sqs.py
requirements/: base.in  base.txt  dev.in  dev.txt
rules/: certificate_manager_certificate_name_tag.py  cloudfront_distribution_comment.py  cloudfront_distribution_logging.py  metadata_ax_changeset_auto_approve.py  s3_block_public_access.py  s3_bucket_encryption.py  unresolved_object.py
src/cfn_lint_ax/: _utils.py
src/cfn_lint_ax/rules/: certificate_manager.py  cloud_front.py  code_build.py  ecr.py  ecs.py  intrinsic_function.py  metadata.py  s3.py  sqs.py  tags.py
src/cfn_lint_ax/serverless_rules/: __init__.py  api_gateway.py  eventbridge.py  lambda_.py  sns.py  step_functions.py
tests/: conftest.py  test_bad_templates.py  test_certificate_manager_certificate.py  test_cloudfront_distribution.py  test_code_build_project_log_group.py  test_ecs_cluster.py  test_good_templates.py  test_metadata_ax_changeset_auto_approve.py  test_rule_ids.py  test_rules.py  test_s3_block_public_access.py  test_s3_bucket_encryption.py  utils.py
tests/bad/: E9101_unresolved_object.yaml  E9401_metadata_ax_changeset_auto_approve.yaml  I9301_ecs_fargate_platform_version_outdated.yaml  I9302_ecr_autocleanup_tag_bad_value.yaml  I9302_ecr_autocleanup_tag_missing.yaml  I9303_cost_allocation_tags.yaml  I9304_cost_allocation_tags_project.yaml  I9305_ecs_service_propagate_tags.yaml  W9301_s3_bucket_with_bad_public_access_block_configuration.yaml  W9301_s3_bucket_without_public_access_block_configuration.yaml  W9302_s3_bucket_without_bucket_encryption.yaml  W9303_cloudfront_distribution_without_logging_configuration.yaml  W9303_cost_allocation_tags.yaml  W9304_cloudfront_distribution_without_comment.yaml  W9305_certificate_manager_certificate_without_name.yaml  W9306_codebuild_project_cloudwatch_logs.yaml  W9307_cloudfront_distribution_without_response_header_policy.yaml  W9309_ecs_fargate_deployment_configuration.yaml  W9310_codebuild_project_image.yaml  W9311_sqs_queue_encryption.yaml  cloudfront_distribution_without_comment.yaml  cloudfront_distribution_without_logging_configuration.yaml  cloudfront_response_header_policy_strict_transport_security.yaml  codebuild_project.yaml  ecs_fargate_cluster.yaml  metadata_ax_changeset_auto_approve.yaml  s3_bucket_with_bad_public_access_block_configuration.yaml  s3_bucket_without_bucket_encryption.yaml  s3_bucket_without_public_access_block_configuration.yaml  unresolved_object.yaml
tests/good/: certificate_manager_certificate.yaml  cloudfront_distribution.yaml  codebuild_project.yaml  ecs_fargate_cluster.yaml  erc_repository.yaml  metadata_ax_changeset_auto_approve.yaml  s3_bucket.yaml  serverless.yaml  service_catalog_app_registry_application.yaml  sqs_queue.yaml
tests/serverless_rules/: test_templates.py  test_utils.py
tests/serverless_rules/templates/: es1001-missing.fail.yaml  es1001.pass.yaml  es1005.pass.yaml  es1006.fail.yaml  es1006.pass.yaml  es1007.fail.yaml  es1007.pass.yaml  es2000-http-empty.fail.yaml  es2000-http-missing.fail.yaml  es2000-rest-empty.fail.yaml  es2000-rest-missing.fail.yaml  es2003-http-missing.fail.yaml  es2003-http-nothrottle.fail.yaml  es2003-http.pass.yaml  es2003-rest-missing.fail.yaml  es2003-rest-nodefault.fail.yaml  es2003-rest-nothrottle.fail.yaml  es2003-rest.pass.yaml  es4000-missing.fail.yaml  es4000-partial.fail.yaml  es4000.pass.yaml  es6000-multiple.pass.yaml  es6000.fail.yaml  es6000.pass.yaml  es7000.fail.yaml  es7000.pass.yaml  ws1000-passthrough.fail.yaml  ws1000.pass.yaml  ws1002-permissions.fail.yaml  ws1002-sam.fail.yaml  ws1002-sub-principal.pass.yaml  ws1002.pass.yaml  ws1003-fullstar.fail.yaml  ws1003-substar.pass.yaml  ws1003.fail.yaml  ws1003.pass.yaml  ws1004-hardcoded.pass.yaml  ws1004-join.pass.yaml  ws1004-missing.fail.yaml  ws1004-noretention.fail.yaml  (+16 more)
