# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/
[build-system]
requires = ["setuptools >= 75.2.0", "wheel >= 0.44.0"]
build-backend = "setuptools.build_meta"


[project]
name = "cfn_lint_ax"
version = "1.2.0"
authors = [
    {name = "AX Semantics", email = "infrastructure@ax-semantics.com"},
]
description = "Rules for cfn lint."
requires-python = ">=3.9"
keywords = ["cloudformation", "lint", "cfn-lint"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cfn-lint >= 1.18.1",
]
dynamic = ["readme"]

[project.urls]
Source = "https://github.com/aexeagmbh/cfn-lint-rules"
Tracker = "https://github.com/aexeagmbh/cfn-lint-rules/issues"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
include = ["cfn_lint_ax", "cfn_lint_ax.*"]
namespaces = true


[tool.black]
# See https://github.com/ambv/black/blob/master/pyproject.toml
line-length = 88
target_version = ["py39", "py310", "py311", "py312", "py313"]


[tool.isort]
balanced_wrapping = true
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
indent = "    "
known_first_party = [
    "rules",
]
line_length = 88
multi_line_output = 3


[tool.pylint."messages control"]
disable = [
    "attribute-defined-outside-init",
    "duplicate-code",
    "line-too-long",
    "missing-docstring",
]


[tool.winky]
target_branch = "winky"

[[tool.winky.uv]]
file = "./requirements/base.in"
hashes = true
python = "3.9"

[[tool.winky.uv]]
file = "./requirements/dev.in"
hashes = true
python = "3.9"
