# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/
[build-system]
requires = ["setuptools >= 80.9.0", "wheel >= 0.45.1"]
build-backend = "setuptools.build_meta"


[project]
name = "cfn_lint_ax"
version = "1.2.0"
authors = [
    {name = "AX Semantics", email = "infrastructure@ax-semantics.com"},
]
description = "Rules for cfn lint."
requires-python = ">=3.9"
keywords = ["cloudformation", "lint", "cfn-lint"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cfn-lint >= 1.18.1",
]
dynamic = ["readme"]

[project.urls]
Source = "https://github.com/aexeagmbh/cfn-lint-rules"
Tracker = "https://github.com/aexeagmbh/cfn-lint-rules/issues"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-annotations-complexity>=0.1.0",
    "flake8-builtins>=2.5.0",
    "flake8-comprehensions>=3.16.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "pytest-sugar>=1.0.0",
    "yamllint>=1.37.1",
]
publish = [
    "twine>=6.1.0",
]


[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cfn_lint_ax", "cfn_lint_ax.*"]
namespaces = true


[tool.black]
# See https://github.com/ambv/black/blob/master/pyproject.toml
line-length = 88


[tool.isort]
balanced_wrapping = true
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
indent = "    "
known_first_party = [
    "rules",
]
line_length = 88
multi_line_output = 3


[tool.pylint.main]
ignore = [".venv"]

[tool.pylint."messages control"]
disable = [
    "attribute-defined-outside-init",
    "duplicate-code",
    "line-too-long",
    "missing-docstring",
]


[tool.uv]

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple"
default = true


[tool.winky]
target_branch = "winky"

[[tool.winky.uv_lock]]
file = "./uv.lock"
