# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/
[build-system]
requires = ["setuptools >= 80.9.0", "wheel >= 0.45.1"]
build-backend = "setuptools.build_meta"


[project]
name = "cfn_lint_ax"
version = "1.3.0"
authors = [
    {name = "AX Semantics", email = "infrastructure@ax-semantics.com"},
]
description = "Rules for cfn lint."
requires-python = ">=3.10"
keywords = ["cloudformation", "lint", "cfn-lint"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cfn-lint >= 1.18.1",
]
dynamic = ["readme"]

[project.urls]
Source = "https://github.com/aexeagmbh/cfn-lint-rules"
Tracker = "https://github.com/aexeagmbh/cfn-lint-rules/issues"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-annotations-complexity>=0.1.0",
    "flake8-builtins>=3.0.0",
    "flake8-comprehensions>=3.16.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pytest-sugar>=1.1.1",
    "yamllint>=1.37.1",
]
publish = [
    "twine>=6.1.0",
]


[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cfn_lint_ax", "cfn_lint_ax.*"]
namespaces = true


[tool.black]
# See https://github.com/ambv/black/blob/master/pyproject.toml
line-length = 88


[tool.isort]
balanced_wrapping = true
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
indent = "    "
known_first_party = [
    "rules",
]
line_length = 88
multi_line_output = 3


[tool.mypy]
# import discovery
ignore_missing_imports = true
follow_imports = "silent"
follow_imports_for_stubs = false
# dynamic typing
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
# untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
# None and optional handling
no_implicit_optional = false
strict_optional = true
# warnings
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
# miscellaneous
warn_redundant_casts = true
# platform
python_version = "3.10"
exclude = "build/"


[tool.pylint.main]
ignore = [".venv"]

[tool.pylint."messages control"]
disable = [
    "attribute-defined-outside-init",
    "duplicate-code",
    "line-too-long",
    "missing-docstring",
]


[tool.uv]

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple"
default = true


[tool.winky]
target_branch = "winky"

[[tool.winky.uv_lock]]
file = "./uv.lock"
